QoL improvements & small code cleanup - Admin commands now support '/drops:' before 'multiplier' (e.g. /drops:multiplier clear, list etc.) - Moved all permission nodes to a constant value under the 'Drops' class - Changed BlockBreakListener limit threshold from 64 -> 127 - Cleaned up unnecessary ItemManager logic/checking