@@ -10,7 +10,6 @@ import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
 import java.util.List;
 
 public record MultiplierCommand(ItemManager itemManager) implements CommandExecutor, TabCompleter {
@@ -23,7 +22,7 @@ public record MultiplierCommand(ItemManager itemManager) implements CommandExecu
         }
 
         if (command.getName().equalsIgnoreCase("multiplier")) {
-            if (player.hasPermission("drops.multiplier")) {
+            if (player.hasPermission(Drops.DEFAULT_PERMISSION_NODE)) {
                 if (args.length <= 1) {
                     player.sendMessage(Text.format("&cUsage:"));
                     player.sendMessage(Text.format("&c/" + command.getName() + " <number> <item_id>"));
@@ -42,6 +41,9 @@ public record MultiplierCommand(ItemManager itemManager) implements CommandExecu
 
     @Override
     public @NotNull List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-        return Arrays.asList("clear", "list");
+        if (!sender.hasPermission(Drops.DEFAULT_PERMISSION_NODE)) {
+            return List.of();
+        }
+        return List.of("clear", "list");
     }
 }
